--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.2.0",
     "common-tags": "^1.7.2",
     "core-js": "^2.4.1",
+    "datatables.net-bs4": "^1.10.16",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
