--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "common-tags": "^1.7.2",
     "core-js": "^2.4.1",
     "datatables.net-bs4": "^1.10.16",
+    "ngx-loading": "^1.0.14",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
