--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "datatables.net-bs4": "^1.10.16",
     "ngx-loading": "^1.0.14",
     "rxjs": "^5.5.6",
+    "store2": "^2.7.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
